--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
+    "mathjs": "^11.3.3",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-splash-screen": "^3.3.0"
